# kinetica-agent-api-demo

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
kinetica_agent_api_demo/: agent_utils.py  demo_agent.py  demo_config.py
tests/: test_agent.py  test_create_data.py
